--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 PORT=3000
+MONGODB_URL=mongodb://localhost:27017
+MONGODB_NAME=listify
+MONGODB_USER=root
+MONGODB_PASSWORD=password
+
+MONGO_PORT=27018
